Fix Sonar issues and add dedicated exceptions